--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="application-name" content="My Phaser Game" />
-    <meta name="apple-mobile-web-app-title" content="My Phaser Game" />
+    <meta name="application-name" content="Run" />
+    <meta name="apple-mobile-web-app-title" content="Run" />
     <meta name="msapplication-starturl" content="./" />
 
     <link rel="icon" type="image/png" sizes="192x192" href="./icons/icons-192.png" />
@@ -23,7 +23,7 @@
 
     <link rel="shortcut icon" href="./favicon.png" type="image/x-icon" />
 
-    <title>My Phaser Game</title>
+    <title>Run</title>
     <style>
         html,
         body {
@@ -44,5 +44,5 @@
         }
     </script>
     </head>
-    <body><script type="text/javascript" src="vendors.7aaa0173f82f7280dbc7.js"></script><script type="text/javascript" src="game.57f891319cb5ced2f6c1.js"></script></body>
+    <body><script type="text/javascript" src="vendors.7aaa0173f82f7280dbc7.js"></script><script type="text/javascript" src="game.85fb8b70a4ea4b1e590b.js"></script></body>
 </html>
